# schichtrechner-marimo

./: .gitignore  LICENSE  README.md  build_wasm.py  htv_calc.py  notebook.py  notebook_abgleich.py  notebook_monat.py  pyproject.toml
.github/workflows/: deploy.yml  organigramm-ingest-tests.yml  organigramm-privacy-gate.yml  vercel-deploy.yml
docs/: sanity_check.py
organigramm/: ECONOMICS.md  HANDOFF.md  OSINT-PLAN.md  README.md  V2-PROPOSALS.md  data.yaml  organigramm_draft.mmd  scrape.sh
organigramm-vercel/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  vercel.json
organigramm-vercel/app/: globals.css  layout.tsx  page.tsx
organigramm-vercel/components/: DetailPanel.tsx  OrgChart.tsx  OrgNode.tsx  PrivateTabs.tsx  ProcessPanel.tsx  ProposalButton.tsx  ProposalModal.tsx  RACIMatrix.tsx  ViewSwitcher.tsx
organigramm-vercel/lib/: data.ts  enrichments.private.example.ts  enrichments.private.stub.ts  enrichments.ts  github.ts  layout.ts  private-data-types.ts  private-data.ts  raci.ts  sources.ts  supabase.ts
organigramm-vercel/scripts/: check-no-private-leaks.mjs  generate-enrichments.mjs
organigramm/ingest/: README.md  __init__.py  email_persons_extract.py  email_role_extract.py  schichtplaner_aggregate.py  schichtplaner_extract.py
organigramm/pdfs/: ad-pdfs-extract.md  ad-urls.txt
organigramm/proposals/: 2026-04-22-register-research.md  2026-04-23-email-aggregate.json  2026-04-23-email-aggregate.md  2026-04-23-notion-betriebsversammlung.md  2026-04-23-pdf-deep-dive.md  2026-04-23-persons-extraction.md  (+2 more)
(+13 files in other folders)
