[project]
name = "schichtrechner-marimo"
version = "0.1.0"
description = "HTV-Schichtlohn-Rechner als marimo-Notebook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.16.0",
]

[tool.uv]
dev-dependencies = [
    "pandas>=2.2",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["organigramm/ingest/tests"]
